source/blender/editors/sculpt_paint/sculpt.c
@@ -74,6 +74,8 @@
 
 #include "DEG_depsgraph.h"
 
+#include "IMB_colormanagement.h"
+
 #include "WM_api.h"
 #include "WM_message.h"
 #include "WM_toolsystem.h"
@@ -8134,7 +8136,10 @@ static int sculpt_sample_color_invoke(bContext *C,
     return OPERATOR_CANCELLED;
   }
 
-  BKE_brush_color_set(scene, brush, active_vertex_color);
+  float color_srgb[3];
+  copy_v3_v3(color_srgb, active_vertex_color);
+  IMB_colormanagement_scene_linear_to_srgb_v3(color_srgb);
+  BKE_brush_color_set(scene, brush, color_srgb);
   BKE_brush_alpha_set(scene, brush, active_vertex_color[3]);
 
   WM_event_add_notifier(C, NC_BRUSH | NA_EDITED, brush);
